objects/Edx_Register_Data__c.object
<CustomObject>
    <fields>
        <fullName>Collateral_Id__c</fullName>
        <label>Collateral Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDX_Register_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EDX Register Interest</label>
        <referenceTo>EDX_Register_Interest__c</referenceTo>
        <relationshipLabel>Edx Register Datas</relationshipLabel>
        <relationshipName>Edx_Register_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>errors__c</fullName>
        <label>errors</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasErrors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasErrors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>registrationIds__c</fullName>
        <label>registrationIds</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Edx Register Data</label>
    <nameField>
        <displayFormat>ERD-{000000}</displayFormat>
        <label>Edx Register Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Edx Register Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>